--- a/index.html
+++ b/index.html
@@ -484,6 +484,19 @@
                             </div>
                             <div class="setting-item">
                                 <div class="setting-info">
+                                    <h4>Set Previous Balance</h4>
+                                    <p>Set your account balance from previous month to track carryover</p>
+                                </div>
+                                <div class="setting-control">
+                                    <div class="balance-input-group">
+                                        <input type="number" id="previous-balance-input" class="form-control" step="0.01" placeholder="Enter previous balance">
+                                        <button class="btn btn-primary" id="set-previous-balance-btn">Set Balance</button>
+                                    </div>
+                                    <small class="help-text">This will set the opening balance for the current month</small>
+                                </div>
+                            </div>
+                            <div class="setting-item">
+                                <div class="setting-info">
                                     <h4>Profile Information</h4>
                                     <p>Your account is linked with Google OAuth</p>
                                 </div>
